# ilford-drop-in

./: .claude.md  .claudeignore  .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  client.ts  const.ts  context.ts  go.mod  go.sum  package.json  runner.ts  tsconfig.json  types.ts
.claude/: settings.local.json
commands/: addForms.ts  checkResponse.ts  createForms.ts  sendForms.ts  (+2 more)
pyallocator/: README.md  pyproject.toml
pyallocator/src/pyallocator/: __init__.py  __main__.py  api.py  cli.py  domain.py  model_builder.py  problem.py  serialization.py  solution.py  solver.py
pyallocator/src/pyallocator/constraints/: __init__.py  at_most_one_team_lead.py  availability.py  base.py  closed_shifts.py  grouping.py  male_required.py  max_frequency.py  no_back_to_back.py  no_duplicate_allocation.py  one_shift_per_month.py  preallocations.py  shift_capacity.py
pyallocator/src/pyallocator/preferences/: __init__.py  at_most_one_team_lead.py  base.py  even_fill.py  fairness.py  maximize_allocations.py  spread_males.py
pyallocator/tests/: conftest.py  test_cli.py  test_end_to_end.py  test_serialization.py
pyallocator/tests/constraints/: test_at_most_one_team_lead.py  test_availability.py  test_closed_shifts.py  test_grouping.py  test_male_required.py  test_max_frequency.py  test_no_back_to_back.py  test_one_shift_per_month.py  test_preallocations.py  test_shift_capacity.py  test_structural.py
pyallocator/tests/preferences/: test_at_most_one_team_lead.py  test_even_fill.py  test_fairness.py  test_maximize_allocations.py  test_spread_males.py
(+356 files in other folders)
